tree-sitter-pickbasic/grammar.js
    source_file: ($) =>
      repeat(choice($._statement, $.end_statement, $.label, $.comment, ";")),

    // Statement labels are numeric only per 1985 spec
    // Low precedence so numbers used as arguments to statements win
    _statement: ($) =>
      choice(
        $.subroutine_statement,
        $.dim_statement,
        $.common_statement,
        $.equate_statement,
        $.assignment_statement,
        $.if_statement,
        $.begin_case_statement,
        $.for_statement,
        $.loop_statement,
        $.goto_statement,
        $.gosub_statement,
        $.on_goto_statement,
        $.return_statement,
        $.stop_statement,
        $.abort_statement,
        $.print_statement,
        $.crt_statement,
        $.input_statement,
        $.input_at_statement,
        $.inputerr_statement,
        $.inputnull_statement,
        $.inputtrap_statement,
        $.data_statement,
        $.prompt_statement,
        $.open_statement,
        $.read_statement,
        $.write_statement,
        $.delete_statement,
        $.readnext_statement,
        $.readt_statement,
        $.writet_statement,
        $.select_statement,
        $.lock_statement,
        $.unlock_statement,
        $.release_statement,
        $.clearfile_statement,
        $.matread_statement,
        $.matwrite_statement,
        $.locate_statement,
        $.execute_statement,
        $.chain_statement,
        $.enter_statement,
        $.call_statement,
        $.precision_statement,
        $.sleep_statement,
        $.rqm_statement,
        $.heading_statement,
        $.footing_statement,
        $.page_statement,
        $.printer_statement,
        $.break_statement,
        $.echo_statement,
        $.mat_statement,
        $.null_statement,
        $.clear_statement,
        $.procread_statement,
        $.procwrite_statement,
        $.rewind_statement,
        $.weof_statement,
        $.expression_statement
      ),

    // --- Program Structure ---
    assignment_statement: ($) =>
      prec.right(1, seq($.lvalue, "=", $._expression)),

    lvalue: ($) =>
      prec(2, choice($.identifier, $.dynamic_array_ref, $.substring_ref)),

    if_statement: ($) =>
      prec.right(2, seq(
        kw("IF"),
        field("condition", $._expression),
        kw("THEN"),
        choice(
          // Multi-line: body END
          seq(
            optional($._block_body),
            optional(seq(kw("ELSE"), optional($._block_body))),
            kw("END")
          ),
          // Single-line: statement [ELSE statement]
          prec.right(seq(
            $._statement,
            optional(seq(kw("ELSE"), $._statement))
          ))
        )
      )),

    // Block body for multi-line constructs
    _block_body: ($) => repeat1($._statement),

    begin_case_statement: ($) =>
      seq(
        kw("BEGIN"),
        kw("CASE"),
        repeat($.case_clause),
        kw("END"),
        kw("CASE")
      ),

    case_clause: ($) =>
      prec.right(seq(
        kw("CASE"),
        $._expression,
        optional($._block_body)
      )),

    for_statement: ($) =>
      prec.right(seq(
        kw("FOR"),
        field("variable", $.identifier),
        "=",
        field("start", $._expression),
        kw("TO"),
        field("end", $._expression),
        optional(seq(kw("STEP"), field("step", $._expression))),
        optional(seq(choice(kw("WHILE"), kw("UNTIL")), $._expression)),
        optional($._block_body),
        kw("NEXT"),
        optional($.identifier)
      )),

    loop_statement: ($) =>
      prec.right(seq(
        kw("LOOP"),
        optional($.loop_body_before),
        optional(
          seq(
            choice(kw("WHILE"), kw("UNTIL")),
            $._expression,
            optional(kw("DO"))
          )
        ),
        optional($.loop_body_after),
        kw("REPEAT")
      )),

    loop_body_before: ($) => prec.right(repeat1($._statement)),
    goto_statement: ($) =>
      seq(
        choice(kw("GOTO"), seq(kw("GO"), optional(kw("TO")))),
        $._goto_target
      ),

    gosub_statement: ($) =>
      seq(
        choice(kw("GOSUB"), seq(kw("GO"), kw("SUB"))),
        $._goto_target
      ),

    _goto_target: ($) => choice($.identifier, $.number),

    on_goto_statement: ($) =>
      seq(
        kw("ON"),
        $._expression,
        choice(
          kw("GOTO"),
          seq(kw("GO"), kw("TO")),
          kw("GOSUB"),
          seq(kw("GO"), kw("SUB"))
        ),
        commaSep1($._goto_target)
      ),

    return_statement: ($) =>
      prec.right(seq(kw("RETURN"), optional(seq(kw("TO"), $._goto_target)))),

    print_statement: ($) =>
      prec.dynamic(10, prec.right(seq(
        kw("PRINT"),
        optional(seq(kw("ON"), $._expression)),
        optional($.print_list)
      ))),

    print_list: ($) =>
      prec.right(seq(
        $._expression,
        repeat(seq(choice(",", ":"), $._expression)),
        optional(choice(",", ":"))
      )),

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $._primary_expression
      ),

    binary_expression: ($) =>
      choice(
        // Logical (lowest precedence)
        prec.left(1, seq($._expression, kw("OR"), $._expression)),
        prec.left(2, seq($._expression, kw("AND"), $._expression)),
        // Relational + pattern matching
        prec.left(3, seq($._expression, choice(
          "=", "<>", "#",
          "<=", "=<", ">=", "=>",
          "<", ">",
          kw("EQ"), kw("NE"), kw("LT"), kw("GT"), kw("LE"), kw("GE")
        ), $._expression)),
        prec.left(3, seq($._expression, choice(kw("MATCH"), kw("MATCHES")), $._expression)),
        // Arithmetic addition/subtraction
        prec.left(4, seq($._expression, "+", $._expression)),
        prec.left(4, seq($._expression, "-", $._expression)),
        // String concatenation
        prec.left(5, seq($._expression, ":", $._expression)),
        prec.left(5, seq($._expression, kw("CAT"), $._expression)),
        // Multiplication/division
        prec.left(6, seq($._expression, "*", $._expression)),
        prec.left(6, seq($._expression, "/", $._expression)),
        // Exponentiation
        prec.right(7, seq($._expression, "^", $._expression)),
        prec.right(7, seq($._expression, "**", $._expression))
      ),

    unary_expression: ($) =>
      prec(8, seq(choice("-", "+", kw("NOT")), $._expression)),

    paren_expression: ($) => seq("(", $._expression, ")"),

    // --- Literals ---
    number: (_) =>
      token(
        choice(
          /\d+(\.\d*)?/,
          /\.\d+/
        )
      ),

    string: (_) =>
      token(
        choice(
          seq("'", /[^'\n]*/, "'"),
          seq('"', /[^"\n]*/, '"'),
          seq("\\", /[^\\\n]*/, "\\")
        )
      ),

    // --- Functions ---
    function_call: ($) =>
      prec(
        2,
        seq(
          field("name", $.identifier),
          token.immediate("("),
          optional(commaSep1($._expression)),
          ")"
        )
      ),

    // @ function - used for cursor positioning: @(col, row)
    at_expression: ($) =>
      seq("@", "(", $._expression, optional(seq(",", $._expression)), ")"),

    // @ system variables: @AM, @VM, @SVM, @(-1), etc.
    identifier: (_) => /[a-zA-Z][a-zA-Z0-9.$]*/,
  },
});
