test/corpus/expressions.txt
================================================================================
Numeric literal
================================================================================

X = 42

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (number)))

================================================================================
Decimal literal
================================================================================

X = 3.14

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (number)))

================================================================================
Double-quoted string
================================================================================

X = "Hello"

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (string)))

================================================================================
Single-quoted string
================================================================================

X = 'Hello'

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (string)))

================================================================================
Backslash-delimited string
================================================================================

X = \Hello\

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (string)))

================================================================================
Addition
================================================================================

X = A + B

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Subtraction
================================================================================

X = A - B

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Multiplication
================================================================================

X = A * B

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Division
================================================================================

X = A / B

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Exponentiation with caret
================================================================================

X = A ^ 2

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (number))))

================================================================================
Exponentiation with double star
================================================================================

X = A ** 2

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (number))))

================================================================================
String concatenation with colon
================================================================================

X = A : B

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
String concatenation with CAT
================================================================================

X = A CAT B

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (identifier))))

================================================================================
Unary minus
================================================================================

X = -Y

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (unary_expression
      (identifier))))

================================================================================
NOT expression
================================================================================

X = NOT Y

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (unary_expression
      (identifier))))

================================================================================
Relational equals
================================================================================

IF X = 5 THEN PRINT "YES"

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (identifier)
      (number))
    (print_statement
      (print_list
        (string)))))

================================================================================
Relational not-equal with angle brackets
================================================================================

IF X <> 5 THEN PRINT "NO"

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (identifier)
      (number))
    (print_statement
      (print_list
        (string)))))

================================================================================
Relational not-equal with hash
================================================================================

IF X # 5 THEN PRINT "NO"

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (identifier)
      (number))
    (print_statement
      (print_list
        (string)))))

================================================================================
Logical AND
================================================================================

IF X > 0 AND X < 100 THEN PRINT "OK"

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (binary_expression
        (identifier)
        (number))
      (binary_expression
        (identifier)
        (number)))
    (print_statement
      (print_list
        (string)))))

================================================================================
Logical OR
================================================================================

IF X = 1 OR X = 2 THEN PRINT "OK"

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (binary_expression
        (identifier)
        (number))
      (binary_expression
        (identifier)
        (number)))
    (print_statement
      (print_list
        (string)))))

================================================================================
MATCH expression
================================================================================

IF X MATCHES "3N" THEN PRINT "NUMERIC"

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (identifier)
      (string))
    (print_statement
      (print_list
        (string)))))

================================================================================
Operator precedence: multiply before add
================================================================================

X = A + B * C

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (identifier)
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
Parenthesized expression
================================================================================

X = (A + B) * C

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (binary_expression
      (paren_expression
        (binary_expression
          (identifier)
          (identifier)))
      (identifier))))

================================================================================
Function call
================================================================================

X = LEN(STR)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier))))

================================================================================
Function call with multiple args
================================================================================

X = FIELD(REC, AM, 3)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (identifier)
      (number))))

================================================================================
Nested function calls
================================================================================

X = TRIM(FIELD(REC, AM, 1))

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (function_call
        name: (identifier)
        (identifier)
        (identifier)
        (number)))))

================================================================================
At expression
================================================================================

PRINT @(10, 5)

--------------------------------------------------------------------------------

(source_file
  (print_statement
    (print_list
      (at_expression
        (number)
        (number)))))
