test/corpus/functions.txt
================================================================================
LEN function
================================================================================

X = LEN(STR)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier))))

================================================================================
CHAR function
================================================================================

AM = CHAR(254)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (number))))

================================================================================
FIELD function
================================================================================

X = FIELD(REC, ".", 2)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (string)
      (number))))

================================================================================
TRIM function
================================================================================

X = TRIM(STR)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier))))

================================================================================
INDEX function
================================================================================

POS = INDEX(STR, ".", 1)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (string)
      (number))))

================================================================================
ICONV function
================================================================================

DATE.INT = ICONV(DATE.STR, "D")

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (string))))

================================================================================
OCONV function
================================================================================

DATE.STR = OCONV(DATE.INT, "D2/")

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (string))))

================================================================================
ABS function
================================================================================

X = ABS(Y)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier))))

================================================================================
INT function
================================================================================

X = INT(Y)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier))))

================================================================================
MOD function
================================================================================

X = MOD(A, B)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (identifier))))

================================================================================
STR function
================================================================================

X = STR("*", 40)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (string)
      (number))))

================================================================================
SPACE function
================================================================================

X = SPACE(10)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (number))))

================================================================================
DATE function
================================================================================

X = DATE()

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier))))

================================================================================
TIME function
================================================================================

X = TIME()

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier))))

================================================================================
COUNT function
================================================================================

X = COUNT(STR, ".")

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (string))))

================================================================================
DCOUNT function
================================================================================

X = DCOUNT(STR, AM)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (identifier))))

================================================================================
EXTRACT function
================================================================================

X = EXTRACT(REC, 1, 0, 0)

--------------------------------------------------------------------------------

(source_file
  (assignment_statement
    (lvalue (identifier))
    (function_call
      name: (identifier)
      (identifier)
      (number)
      (number)
      (number))))

================================================================================
At expression for cursor positioning
================================================================================

PRINT @(10, 5): "Hello"

--------------------------------------------------------------------------------

(source_file
  (print_statement
    (print_list
      (binary_expression
        (at_expression
          (number)
          (number))
        (string)))))
