tree-sitter-pickbasic/test/corpus/control_flow.txt
================================================================================
Single-line IF THEN
================================================================================

IF X = 1 THEN PRINT "ONE"

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (identifier)
      (number))
    (print_statement
      (print_list
        (string)))))

================================================================================
Single-line IF THEN ELSE
================================================================================

IF X = 1 THEN PRINT "ONE" ELSE PRINT "OTHER"

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (identifier)
      (number))
    (print_statement
      (print_list
        (string)))
    (print_statement
      (print_list
        (string)))))

================================================================================
Multi-line IF THEN END
================================================================================

IF X = 1 THEN
  PRINT "ONE"
END

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (identifier)
      (number))
    (print_statement
      (print_list
        (string)))))

================================================================================
Multi-line IF THEN ELSE END
================================================================================

IF X = 1 THEN
  PRINT "ONE"
ELSE
  PRINT "OTHER"
END

--------------------------------------------------------------------------------

(source_file
  (if_statement
    condition: (binary_expression
      (identifier)
      (number))
    (print_statement
      (print_list
        (string)))
    (print_statement
      (print_list
        (string)))))

================================================================================
BEGIN CASE
================================================================================

BEGIN CASE
CASE X = 1
  PRINT "ONE"
CASE X = 2
  PRINT "TWO"
CASE 1
  PRINT "OTHER"
END CASE

--------------------------------------------------------------------------------

(source_file
  (begin_case_statement
    (case_clause
      (binary_expression
        (identifier)
        (number))
      (print_statement
        (print_list
          (string))))
    (case_clause
      (binary_expression
        (identifier)
        (number))
      (print_statement
        (print_list
          (string))))
    (case_clause
      (number)
      (print_statement
        (print_list
          (string))))))

================================================================================
FOR NEXT loop
================================================================================

FOR I = 1 TO 10
  PRINT I
NEXT I

--------------------------------------------------------------------------------

(source_file
  (for_statement
    variable: (identifier)
    start: (number)
    end: (number)
    (print_statement
      (print_list
        (identifier)))
    (identifier)))

================================================================================
FOR NEXT with STEP
================================================================================

FOR I = 0 TO 100 STEP 10
  PRINT I
NEXT I

--------------------------------------------------------------------------------

(source_file
  (for_statement
    variable: (identifier)
    start: (number)
    end: (number)
    step: (number)
    (print_statement
      (print_list
        (identifier)))
    (identifier)))

================================================================================
LOOP WHILE REPEAT
================================================================================

LOOP
  X = X + 1
WHILE X < 100 DO
REPEAT

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    (loop_body_before
      (assignment_statement
        (lvalue (identifier))
        (binary_expression
          (identifier)
          (number))))
    (binary_expression
      (identifier)
      (number))))

================================================================================
LOOP UNTIL REPEAT
================================================================================

LOOP
  X = X + 1
UNTIL X >= 100 DO
REPEAT

--------------------------------------------------------------------------------

(source_file
  (loop_statement
    (loop_body_before
      (assignment_statement
        (lvalue (identifier))
        (binary_expression
          (identifier)
          (number))))
    (binary_expression
      (identifier)
      (number))))

================================================================================
GOTO statement
================================================================================

GOTO 100

--------------------------------------------------------------------------------

(source_file
  (goto_statement
    (number)))

================================================================================
GO TO statement
================================================================================

GO TO 200

--------------------------------------------------------------------------------

(source_file
  (goto_statement
    (number)))

================================================================================
GOSUB statement
================================================================================

GOSUB 500

--------------------------------------------------------------------------------

(source_file
  (gosub_statement
    (number)))

================================================================================
ON GOTO statement
================================================================================

ON X GOTO 100, 200, 300

--------------------------------------------------------------------------------

(source_file
  (on_goto_statement
    (identifier)
    (number)
    (number)
    (number)))

================================================================================
ON GOSUB statement
================================================================================

ON X GOSUB 100, 200, 300

--------------------------------------------------------------------------------

(source_file
  (on_goto_statement
    (identifier)
    (number)
    (number)
    (number)))

================================================================================
RETURN statement
================================================================================

RETURN

--------------------------------------------------------------------------------

(source_file
  (return_statement))

================================================================================
RETURN TO statement
================================================================================

RETURN TO 100

--------------------------------------------------------------------------------

(source_file
  (return_statement
    (number)))
